--- a/client/src/app/home/home.component.html
+++ b/client/src/app/home/home.component.html
@@ -12,6 +12,7 @@
         <div class="row justify-content-center">
             <div class="col-4">
                 <app-register
+                 [inputUsers] = "users"
                  (cancelEvent)="cancelRegister($event)"
                 >
                 </app-register>
